<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />
        
        <item
            android:id="@+id/nav_drawer_metrics"
            android:icon="@drawable/ic_metrics"
            android:title="@string/nav_metrics" />
        
        <item
            android:id="@+id/nav_drawer_reminders"
            android:icon="@drawable/ic_reminder"
            android:title="@string/nav_reminders" />
        
        <item
            android:id="@+id/nav_drawer_records"
            android:icon="@drawable/ic_records"
            android:title="@string/nav_records" />
        
        <item
            android:id="@+id/nav_drawer_quick_actions"
            android:icon="@drawable/ic_flash"
            android:title="@string/quick_actions" />

        <item
            android:id="@+id/nav_drawer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
    </group>
    
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/nav_settings" />
                
                <item
                    android:id="@+id/nav_drawer_help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/nav_help" />
                
                <item
                    android:id="@+id/nav_drawer_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_logout" />
            </group>
        </menu>
    </item>
    
</menu>
