<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_health_tracking"
        android:title="@string/nav_dashboard" />
    
    <item
        android:id="@+id/nav_metrics"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_metrics" />
    
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_reminder"
        android:title="@string/nav_add" />
    
    <item
        android:id="@+id/nav_records"
        android:icon="@drawable/ic_medical_records"
        android:title="@string/nav_records" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
