<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_xl">

    <ImageView
        android:id="@+id/ivOnboardingIcon"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:src="@drawable/ic_health_tracking"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvOnboardingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title_1"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvOnboardingDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_desc_1"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/spacing_tiny" />

</LinearLayout>
