<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/nav_header_height"
    android:background="@color/primary_red_light"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="@dimen/padding_normal"
    android:paddingBottom="@dimen/padding_large">

    <ImageView
        android:id="@+id/nav_header_avatar"
        android:layout_width="@dimen/avatar_size_large"
        android:layout_height="@dimen/avatar_size_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/nav_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:textColor="@color/text_primary" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/text_secondary" />

</LinearLayout>
