<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:minHeight="@dimen/list_item_height"
    android:orientation="horizontal"
    android:padding="@dimen/padding_normal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/primary_container"
        app:cardCornerRadius="@dimen/corner_radius_xl"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/ivReportIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/report_preview"
            android:src="@drawable/ic_description"
            app:tint="@color/primary" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvReportTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_report"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReportInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_pdf_file_size"
            android:textColor="@color/on_surface_variant"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="@dimen/icon_size_small"
        android:layout_height="@dimen/icon_size_small"
        android:contentDescription="@string/navigate"
        android:src="@drawable/ic_menu"
        app:tint="?attr/colorOnSurface" />

</LinearLayout>
